--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h1>New York Times Search</h1>
         </div>  
         <div class="row searchParameters">
-            <div class="rowTopper">Search Parameters</div>
+            <div class="rowTopper" id="search">Search Parameters</div>
 <!-- search term row -->              
         <div class="rowSearch">
             <div class="col-3">Search Term:</div>
